[tool.poetry]
name = "pcrjjc"
version = "0.1.0"
description = "这是一个基于HoshinoV2的用于提醒BCR竞技场排名变动的插件。"
authors = ["lulu666lulu"]

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.7.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
